tests/errors/unclosed-interpolation/main.pa
def msg = "n = $(to-string 1"
